<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:background="@color/colorItemBackgroundDark">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1">

            <GridLayout
                android:id="@+id/genres_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:columnCount="4"
                >
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_action_adventure"
                    />
                <CheckBox
                    android:id="@+id/check_box_action_adventure"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_animation"
                    />
                <CheckBox
                    android:id="@+id/check_box_animation"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_comedy"
                    />
                <CheckBox
                    android:id="@+id/check_box_comedy"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_crime"
                    />
                <CheckBox
                    android:id="@+id/check_box_crime"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_documentary"
                    />
                <CheckBox
                    android:id="@+id/check_box_documentary"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_drama"
                    />
                <CheckBox
                    android:id="@+id/check_box_drama"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_family"
                    />
                <CheckBox
                    android:id="@+id/check_box_family"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_kids"
                    />
                <CheckBox
                    android:id="@+id/check_box_kids"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_mystery"
                    />
                <CheckBox
                    android:id="@+id/check_box_mystery"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_news"
                    />
                <CheckBox
                    android:id="@+id/check_box_news"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_reality"
                    />
                <CheckBox
                    android:id="@+id/check_box_reality"/>

                <TextView
                    android:layout_height="wrap_content"

                    android:textColor="@color/colorTextLight"
                    android:layout_width="wrap_content"
                    android:text="@string/genre_sci_fi_fantasy"
                    />
                <CheckBox
                    android:id="@+id/check_box_sci_fi_fantasy"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_soap"
                    />
                <CheckBox
                    android:id="@+id/check_box_soap"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_talk"
                    />
                <CheckBox
                    android:id="@+id/check_box_talk"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_war_politics"
                    />
                <CheckBox
                    android:id="@+id/check_box_war_politics"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/genre_western"
                    />
                <CheckBox
                    android:id="@+id/check_box_western"/>

            </GridLayout>



    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_select_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:textSize="@dimen/text_size_small"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true"
            android:text="@string/include_genres"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:textSize="@dimen/text_size_small"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true"
            android:text="@string/cancel"/>

    </LinearLayout>
</LinearLayout>