...
        <item>SHOW</item>
        <item>SEASONS</item>
        <item>CAST</item>
        <item>RECOMMENDATIONS</item>
    </string-array>

    <string name="no_connection">No Connection</string>
    <string name="retry">Retry</string>

    <!-- updates -->
    <string name="auto_updates">Update Automatically</string>
    <string name="auto_updates_info">In order for the updates to correctly sync, an update needs to be performed at least once every 3 days.</string>
    <string name="select_all">Select All</string>
    <string name="details_update">Show Details</string>
    <!-- strings to make tmdb requests -->
    <string name="sort_by_vote_average_request">vote_average.desc</string>
    <string name="sort_by_popularity_request">popularity.desc</string>
    <string name="sort_by_first_air_date_desc_request">first_air_date.desc</string>
    <string name="sort_by_first_air_date_asc_request">first_air_date.asc</string>
    <string name="poster_path">http://image.tmdb.org/t/p/w300</string>

    <!--  actor menu links -->
...
