...
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageButton
                        android:id="@+id/btn_expand"
                        android:theme="@style/AppTheme.Button"
                        app:srcCompat="@drawable/ic_expand_more_white_24dp"
                        android:layout_width="@dimen/btn_square_side"
                        android:layout_height="@dimen/btn_square_side"
                        android:layout_margin="@dimen/btn_square_margin"
                        />

                    <ImageButton
                        android:id="@+id/btn_find"
                        android:theme="@style/AppTheme.Button"
                        app:srcCompat="@drawable/ic_search_white_24dp"
                        android:layout_width="@dimen/btn_square_side"
                        android:layout_height="@dimen/btn_square_side"
                        android:layout_margin="@dimen/btn_square_margin"/>

...
